# hari-plotter

./: .buildinfo  .gitignore  README.md  appmap.yml  ascii_logo.py  environment.yml  examples_page.html  genindex.html  index.html  installation.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  quotes.py  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  examples_page.doctree  index.doctree  installation.doctree  usage.doctree
_modules/: index.html
_sources/: examples_page.rst.txt  index.rst.txt  installation.rst.txt
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/examples/: graph.md  (+2 more)
examples/: example.ipynb  graph.html  graph.ipynb  hari_graph.ipynb  plotter.html  plotter.ipynb
hari_plotter/: __init__.py  analysis.py  cluster.py  color_scheme.py  distibutions.py  dynamics.py  graph.py  group.py  hari_dynamics.py  hari_graph.py  interface.py  lazy_graph.py  lazy_hari_graph.py  model.py  multirun.py  node_gatherer.py  parameters.py  plot.py  plotter.py  plotters.py  pyqt_test.py  simulation.py
res/: Quotes.json
source/: hari_plotter.cluster.html  hari_plotter.color_scheme.html  hari_plotter.distributions.html  hari_plotter.dynamics.html  hari_plotter.graph.html  hari_plotter.group.html  hari_plotter.html  hari_plotter.interface.html  hari_plotter.lazy_graph.html  hari_plotter.model.html  hari_plotter.node_gatherer.html  hari_plotter.parameters.html  hari_plotter.plot.html  hari_plotter.plotter.html  hari_plotter.simulation.html  modules.html
tests/: activity.toml  conftest.py  degroot.toml  examples_check  network.txt  opinions_0.txt  small.json  test.json  test_cluster.py  test_haridynamics.py  test_harigraph.py  test_interface.py  test_model.py  test_multirun.py  test_plotter.py  test_precommit.py  test_pyqt.py  test_simulation.py
(+69 files in other folders)
