[tool.poetry]
name = "hari-plotter"
version = "0.2.0"
description = "`hari-plotter` enables post-processing, plotting, and visualizations of Seldon simulations and output (under development)."
authors = ["Ivan Tambovtsev <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "hari_plotter"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.0"
coverage = "^7.3.2"
matplotlib = "^3.8.0"
networkx = "^3.1"
toml = "^0.10.2"
imageio = "^2.31.6"
seaborn = "^0.13.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
scikit-fuzzy = "^0.4.2"
PyQt5 = [
    {version = "5.14", python = "~3.10", optional = true},  # For Python 3.10, PyQt5 must be exactly version 5.14
    {version = "^5.14", python = "~3.12", optional = true}  # For Python 3.12, PyQt5 version 5.14 or higher is acceptable
]

[tool.poetry.extras]
qt = ["PyQt5"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"
pytest-qt = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hari-plotter = "hari_plotter.gui.main_window:main"